tests/baselines/reference/declFileObjectLiteralWithOnlyGetter.errors.txt
tests/cases/compiler/declFileObjectLiteralWithOnlyGetter.ts(4,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/declFileObjectLiteralWithOnlyGetter.ts (1 errors) ====
    
    function /*1*/makePoint(x: number) { 
        return {
            get x() { return x; },
                ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        };
    };
    var /*4*/point = makePoint(2);
    var /*2*/x = point./*3*/x;
    